# AnyNdk

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dds/anyndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native11.cpp  native11_dy.cpp  native3.cpp  native4.cpp
app/src/main/cpp/native5/: Instance.cpp  Student.cpp  Student.h  native5.cpp
app/src/main/java/com/dds/anyndk/: AnyNdk.java  App.java  GmSSLActivity.java  MainActivity.java  OpenSSLActivity.java  ParsonActivity.java
app/src/main/res/layout/: activity_gm_ssl.xml  activity_main.xml  activity_open_ssl.xml  activity_parson.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dds/anyndk/: ExampleUnitTest.java
c1_base/: build.gradle
c1_base/src/androidTest/java/com/dds/anyndk/: ExampleInstrumentedTest.java
c1_base/src/androidTest/java/com/trustmobi/anyndk/: ExampleInstrumentedTest.java
c1_base/src/main/: AndroidManifest.xml
c1_base/src/main/cpp/: native11.cpp  native3.cpp  native4.cpp
c1_base/src/main/cpp/native5/: Instance.h
c1_base/src/main/java/com/dds/anyndk/: AnyNdk.java  C1Activity.java  JavaHelper.java
c1_base/src/main/java/com/trustmobi/anyndk/: AnyNdk.java  C1Activity.java  JavaHelper.java
c1_base/src/main/res/layout/: activity_c1.xml
c1_base/src/main/res/values/: strings.xml
c1_base/src/test/java/com/trustmobi/anyndk/: ExampleUnitTest.java
c2_base/: build.gradle
c2_base/src/main/: AndroidManifest.xml
c2_base/src/main/jni/: CMakeLists.txt  Util.c  log.cpp  log.h  macro.h
c2_base/src/main/jni/utils/: util.cpp  util.h
c_gmssl/: build-armv7.sh  build-x86.sh  build.gradle  tools.md
c_gmssl/src/main/java/: GmSSL.java
c_gmssl/src/main/jni/: CMakeLists.txt  GmSSL.c  gmssl_err.c  native-gmssl.cpp
c_gmssl/src/main/res/values/: strings.xml
c_gmssl/tools/: _shared.sh  build-gmssl.sh
c_log/: build.gradle
c_log/src/main/jni/: CMakeLists.txt  native-log.cpp
c_log/src/main/res/values/: strings.xml
c_openssl/: build.sh  build_armv7.sh
c_openssl/src/main/: AndroidManifest.xml
c_openssl/src/main/cpp/: cipher.cpp  native-lib.cpp  utils.cpp  utils.h
c_parson/: build.gradle
c_parson/src/main/cpp/: parson-test.cpp
c_parson/src/main/res/values/: strings.xml
csdn/: NDK系列10_c++智能指针.md  NDK系列11_Java和c++交互.md  NDK系列12_编译器_clang_gcc.md  NDK系列13_Makefile.md  NDK系列14_Cmake详解.md  NDK系列1_基本数据类型与内存布局.md  NDK系列3_结构体和共用体.md  NDK系列5_c++基础2.md  NDK系列6_c++基础3_容器.md  NDK系列8_c++基础3_异常.md  NDK系列9_c++线程.md  【NDK系列1】基本数据类型与内存布局.md  【NDK系列2】指针、函数、预处理器.md
csdn/high/: GmSSL编译.md  封装c++日志类.md
csdn/opengl/: opengl系列1_opengl显示摄像头.md  opengl系列1_初识openGL.md  opengl系列2_opengl显示摄像头.md
gmssl/: build.gradle
gmssl-new/: build.gradle
gmssl-new/src/main/: AndroidManifest.xml
gmssl-new/src/main/jni/: CMakeLists.txt  cipher.cpp  cipher.h  mobishield.cpp  native-gmssl.cpp
gmssl-new/src/main/jni/include/: test.h
gmssl-new/src/main/jni/include/internal/: dso.h  thread_once.h
gmssl-new/src/main/jni/include/openssl/: bio.h  bn.h  comp.h  dsa.h  ffx.h  opensslconf.h  rsa.h  saf.h  seed.h  sof.h  srp.h  ssl.h  ui.h  x509_vfy.h
gmssl/src/main/: AndroidManifest.xml
gmssl/src/main/cpp/: CMakeLists.txt
gmssl/src/main/cpp/include/: test.h
gmssl/src/main/cpp/include/openssl/: opensslconf.h
gmssl/src/main/jni/: CMakeLists.txt  Cipher.cpp  Cipher.h  GmCipher.cpp  log.cpp  log.h
gmssl/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
markdown/: NDK系列11_Java和c++交互.md  NDK系列14_Cmake详解.md  NDK系列4_c++基础1.md  NDK系列7_c++基础3_文件与流操作.md  README.md
markdown/high/: 封装c++日志类.md
markdown/opengl/: opengl系列2_opengl显示摄像头.md
opengl/: build.gradle
opengl/src/main/: AndroidManifest.xml
opengl/src/main/res/layout/: activity_dou_camera.xml
opengl/src/main/res/raw/: base_frag.frag  base_vertex.vert  camera_frag.frag  camera_vertex.vert
opengl/src/main/res/values/: strings.xml
openssl/: README.md  build.gradle  build_armv7.sh
openssl/src/main/cpp/: CMakeLists.txt  cipher.cpp  cipher.h  macro.h  native-lib.cpp
openssl/src/main/cpp/include/openssl/: opensslconf.h
parson/: README.md
parson/src/main/: AndroidManifest.xml
parson/src/main/cpp/: CMakeLists.txt  parson-test.cpp
(+51 files in other folders)
